--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,25 +21,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Bookshop uses Node tooling
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
 
-      - name: Install npm dependencies
-        run: npm ci
-
-      - name: Bookshop/Jekyll setup
-        run: npm run jekyll:install
-
-      # Jekyll lives in /site (your _config.yml is there)
+      # Ruby + Bundler needed because jekyll:install runs `bundle`
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.2"
           bundler-cache: true
           working-directory: site
+
+      - name: Install npm dependencies
+        run: npm ci
+
+      - name: Bookshop/Jekyll setup
+        run: npm run jekyll:install
+        working-directory: site
 
       - name: Build site (from /site)
         run: bundle exec jekyll build --trace
