--- a/site/_data/general_settings.yml
+++ b/site/_data/general_settings.yml
@@ -1,5 +1,5 @@
-title: Venkat Anirudh Bodempudi  
-description: Urban Design & Planning Portfolio
+title: Venkat Anirudh Bodempudi — Urban Designer & City Planner
+description: Urban design, zoning, and planning work focused on implementable, community-centered outcomes.
 social_media_share_image: /images/01.jpg
 disqus-identifier:
 google-analytics:
